Correctly reports the required and disabled states after they changed dynamically.

Makes completing HTML forms a much better experience as previously the unavailable and required states would seemingly be announced randomly.
Bug: 760364
Change-Id: Ia3678314142cf32a916e64b81b4a92d7e118caa1
R=aleventhal@chromium.org
TESTED=Manually with Jaws NVDA and VoiceOver, browser tests