third_party/WebKit/Source/core/html/HTMLFormControlElement.cpp
@@ -24,6 +24,7 @@
 
 #include "core/html/HTMLFormControlElement.h"
 
+#include "core/dom/AXObjectCache.h"
 #include "core/dom/ElementTraversal.h"
 #include "core/dom/TaskRunnerHelper.h"
 #include "core/dom/events/Event.h"
@@ -188,12 +189,16 @@ void HTMLFormControlElement::DisabledAttributeChanged() {
   if (GetLayoutObject())
     LayoutTheme::GetTheme().ControlStateChanged(*GetLayoutObject(),
                                                 kEnabledControlState);
+  if (AXObjectCache* cache = GetDocument().ExistingAXObjectCache())
+    cache->CheckedStateChanged(this);
 }
 
 void HTMLFormControlElement::RequiredAttributeChanged() {
   SetNeedsValidityCheck();
   PseudoStateChanged(CSSSelector::kPseudoRequired);
   PseudoStateChanged(CSSSelector::kPseudoOptional);
+  if (AXObjectCache* cache = GetDocument().ExistingAXObjectCache())
+    cache->CheckedStateChanged(this);
 }
 
 bool HTMLFormControlElement::IsReadOnly() const {
